added chat socket functionality

--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -12,7 +12,7 @@
         <a class="nav-link" href="/users/addTrip">Add Trip</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Update Trip</a>
+        <a class="nav-link" href="/users/chat">Chat</a>
       </li>
 
       <form action="/users/logout" class="form-inline my-2 my-lg-0" method="GET">
