--- a/views/viewTrips.mustache
+++ b/views/viewTrips.mustache
@@ -16,9 +16,10 @@
             <div class="card-body">
                 <h5 class="card-title">{{name}}</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">{{start}} | {{end}}</p>
                 <form action='/users/delete-trip' method="POST">
                     <input type="hidden" name="tripName" value="{{tripID}}">
-                    <button type="Delete">Delete</button>
+                    <button class="btn btn-sm btn-outline-secondary" type="Delete">Delete</button>
                 </form>
             </div>
         </div>
@@ -36,22 +37,3 @@
 </body>
 
 </html>
-<!--
-      <form action="/users/logout" class="form-inline my-2 my-lg-0" method="GET">
-        <button class="btn btn-sm btn-outline-secondary my-2 my-sm-0" type="submit" value="Log Out">Log Out</button>
-      </form>
-
-
-    <div class="card" style="width: 18rem;">
-        <img src="{{url}}" class="card-img-top">
-            <div class="card-body">
-                <h5 class="card-title">{{name}}</h5>
-                <p class="card-text">{{start}} | {{end}}</p>
-                <form action='/users/delete-trip' method="POST">                    
-                    <input type="submit" value="Delete">
-                    <input type="hidden" name="tripName" value="{{tripID}}">
-                </form>   
-            </div>
-    </div>
-
--->
