added usernames and user count

--- a/views/chat.mustache
+++ b/views/chat.mustache
@@ -14,6 +14,9 @@
             </div>
         </div> 
     </div>
+    <div class="container" id="userCountDiv">
+        <p>User Count: {{userCount}} </p>
+    </div>
 
         <div class="input-group mb-3">
             <div class="input-group-prepend">
